--- a/css/common.css
+++ b/css/common.css
@@ -16,11 +16,13 @@ body {
     color: #1E0606;
 }
 
-/* не работает */
-
-.a {
+a {
     text-decoration: none;
-    color: black;
+    color: #000;
+}
+
+footer a {
+    color: #FFFFFF;
 }
 
 .outline {
@@ -222,11 +224,6 @@ body {
     display: flex;
 }
 
-a:link, a:hover, a:visited {
-    color: black;
-    text-decoration: none;
-}
-
 a:hover svg path {
     fill:#AAAAAA;
     cursor: pointer;
@@ -238,6 +235,7 @@ a:hover svg path {
 }
 
 /* footer */
+
 .footer {
     margin-bottom: 100px;
 }
@@ -303,11 +301,6 @@ input[type="email"]:active {
 
 .social-link:active {
     opacity: .2;
-}
-
-.footer-link {
-    color: #FFFFFF;
-    text-decoration: none;
 }
 
 .footer-link:hover {
