--- a/css/style.css
+++ b/css/style.css
@@ -1,159 +1,3 @@
-/* outline:none влияет на доступность */
-
-*  {
-    box-sizing: border-box;
-    outline: none; 
-}
-
-body {
-    font-family: "Open Sans", Arial, sans-serif;
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 16px;
-    line-height: 22px;
-    font-style: normal;
-    font-weight: normal;
-    color: #1E0606;
-}
-
-/* не работает */
-.a {
-    text-decoration: none; 
-    color: black;
-}
-
-.outline {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.hidden {
-    height: 0;
-    font-size: 0;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 1180px;
-    width: 100%;
-    margin: 0 auto; 
-}
-
-.wrapper {
-    background: #434343;
-    max-width: 1400px;
-    width: 100%;
-    margin: 0 auto;
-    color: #FFFFFF;
-}
-
-.button {
-    background: black;
-    color: #FFFFFF;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 22px;
-    max-width: 123px;
-    width: 100%;
-    text-align: center;
-    padding: 9px;
-    border: none;
-    text-transform: uppercase;
-    display: block;
-    cursor: pointer;    
-}
-
-.button:hover {
-    background: #C29974;    
-}
-
-.button:active {
-    background: #CFAF91;
-}
-
-.button:disabled {
-    background: #C1C1C1;
-}
-
-/* Header */
-
-.header {
-    padding-top: 0%;
-    padding-bottom: 0%;
-    margin-top: 50px;
-    margin-bottom: 80px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    line-height: 19px;text-transform: uppercase;    
-    color: #1E0606;
-    text-decoration: none; 
-}
-
-.header-logo:hover {
-    opacity: .5;
-}
-
-.header-logo:active {
-    opacity: .2;
-}
-
-.header-nav {
-    margin: 0 auto 0 60px;    
-}
-
-.header-list {
-    display: flex;
-    align-items: center;    
-}
-
-.header-item {
-    margin-right: 20px;    
-}
-
-.header-item:hover {
-    opacity: .5;    
-}
-
-.header-item:active {
-    opacity: .2;    
-}
-
-.header-search {
-    margin-right: 20px; 
-}
-
-.header-search:hover {
-    opacity: .5;
-    background: none;
-}
-
-.header-search:active {
-    opacity: .2;
-    background: none;
-}
-
-.header-contacts {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 19px;
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;    
-    color: #1E0606;
-}
-
-.header-contacts:hover {
-    opacity: .5;    
-}
-
-.header-contacts:active {
-    opacity: .2;    
-}
-
 /* slider */
 
 .slider {
@@ -342,7 +186,6 @@ body {
     height: 50px;
 }
 
-
 /* Brands */
 
 .brands-list {
@@ -421,143 +264,6 @@ body {
     margin-bottom: 20px;
 }
 
-/* footer */
-.footer {
-    margin-bottom: 100px;
-}
-
-.footer-content  {
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.footer-first-block {
-    display: flex;
-}
-
-.footer-block-item {
-    margin: auto;
-    max-width: 380px;
-    margin-bottom: 52px;
-}
-
-.footer-link:hover {
-    background: none;
-    opacity: .5;
-}
-
-.item_block {
-    margin-top: 0;
-}
-
-.form-container {
-    display: flex;
-}
-
-input[type="email"] {
-    background: #666666;
-    border: none;
-    max-width: 300px;
-    margin-left: 10px;
-}
-
-input[type="email"]:hover,
-input[type="email"]:active {
-    background: #666666;
-    list-style-type: none;
-    border-top: 2px solid #FFFDFD;
-    border-bottom: 2px solid #FFFDFD;
-    border-left: 2px solid #FFFDFD;
-    max-width: 300px;
-}
-
-.footer-btn {
-    background: #000;
-    border: none;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    max-width: 80px;
-    padding: 9px 22px;    
-}
-
-.social-link:hover {
-    opacity: .5;
-    background: none;
-}
-
-.social-link:active {
-    opacity: .2;
-}
-
-.footer-link {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-.footer-link:hover {
-    color: #A1A1A1;
-}
-
-.footer-link:active {
-    color: #696969;
-}
-
-div > h4 {
-    color: #AAAAAA;
-    border-bottom:2px solid #A2A2A2;
-}
-
-.footer-list {
-    color:#FFFFFF;
-}
-
-.social-list {
-    display: flex;
-    margin-top: 25px;
-}
-
-.social-item {
-    margin-left: 10px;
-}
-
-.footer-copyright {
-    display: flex;
-    border-top:2px solid #A2A2A2;
-}
-
-.rating-item,
-.copyright-item {
-    margin:auto;
-}
-
-.rating-item:hover {
-    color: #836E5B;
-    cursor: pointer;
-}
-
-.rating-item:active {
-    color: #C29974;
-}
-
-.rating-item:hover svg:not(:last-child) path {
-    fill:#836E5B;
-}
-
-.rating-item:active svg:not(:last-child) path {
-    fill:#C29974;
-}
-
-.copyright-link {
-    color: #A2A2A2;
-    text-decoration: none;
-}
-
-.copyright-link:hover {
-    color:#FFFFFF;
-    text-decoration: underline;
-    background: none;
-}
-
 /* Модальное окно */
 
 .contact-form {
@@ -581,7 +287,7 @@ div > h4 {
     font-size: 14px;
     line-height: 19px;
     color: #1E0606;
-    margin-bottom: 15px;
+    margin-bottom: 3px;
 }
 
 .contact-wrapper {
@@ -589,13 +295,14 @@ div > h4 {
 }
 
 div .form-name {
-    display: flex;
     width: 600px;
     bottom: 50px;
 }
 
-.contact-block input {
-    max-width: 290px
+.contact-block {
+    flex-direction: column;
+    width: 290px;
+    margin-right: 20px;
 }
 
 .contact-wrapper:focus-within label {
@@ -636,6 +343,7 @@ div .form-name {
     width: 542px;
 }
 
+/* стили */
 .checkbox label {
     position: relative;
     padding-left: 30px;
@@ -673,4 +381,39 @@ div .form-name {
 
 .input:checked + label:after {
     opacity: 1;
+}
+
+/* modal */
+
+.popup-overlay {
+    width: 100%;
+    height: 100vh;
+    background: rgba(125, 151, 218, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.popup-form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 680px;
+    display: none;
+}
+
+.popup-open,
+.popup-overlay-open {
+    display: block;
+}
+
+.popup-close {
+    position: absolute;
+    top: 0;
+    right: -35px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
 }
