--- a/css/blog.css
+++ b/css/blog.css
@@ -1,3 +1,7 @@
+.posts {
+    margin-bottom: 60px;
+}
+
 .posts-list {
     display: flex;
     justify-content: space-between;
@@ -6,9 +10,7 @@
 }
 
 .posts-item {
-    width: 25%;
-    margin: 10px;
-    margin-right: 20px;
+    max-width: 380px;
     margin-bottom: 30px;
 }
 
