--- a/css/contact.css
+++ b/css/contact.css
@@ -108,16 +108,25 @@ div .form-name {
 }
 
 .checkbox label:after {
+    content: " ";
+    background-image: url(../images/Vector\ 1\ \(Stroke\).png);
+    background-size: 14px 14px;
+    background-repeat: no-repeat;
+    background-position: center;
     width: 13px;
     height: 13px;
     top: 5px;
     left: 5px;
-    background: #C29974;
     opacity: 0;
-}
+} 
 
 .input:checked + label:after {
     opacity: 1;
+}
+
+.input:checked:hover + label:hover {
+    opacity: 1;
+    text-decoration: underline;
 }
 
 .support {
