--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,26 @@
     display: flex;
 }
 
+.toggle-content {
+    display: flex;
+    flex-direction: column;
+    max-width: 30px;
+    margin-top: 17px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.toggle-list {
+    list-style-type: none;
+}
+
+.toggle-item:hover svg rect {
+    fill:#715F5B;
+}
+
 .slider-first-block {
-    margin-top: 89px;
-    margin-left: 133px;
+    margin-top: 60px;
+    margin-left: 120px;
 }
 
 .page-title {
@@ -114,14 +131,13 @@
 
 .btn-control {
     border: none;
-    opacity: .3;
     width: 27px;
     background: none;
-    margin-left: 6px;
+    margin-left: 16px;
 }
 
 .info_item {
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 /* delivery */
@@ -371,16 +387,25 @@ div .form-name {
 }
 
 .checkbox label:after {
+    content: " ";
+    background-image: url(../images/Vector\ 1\ \(Stroke\).png);
+    background-size: 14px 14px;
+    background-repeat: no-repeat;
+    background-position: center;
     width: 13px;
     height: 13px;
     top: 5px;
     left: 5px;
-    background: #C29974;
     opacity: 0;
 }
 
 .input:checked + label:after {
     opacity: 1;
+}
+
+.input:checked:hover + label:hover {
+    opacity: 1;
+    text-decoration: underline;
 }
 
 /* modal */
